<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mediaproj_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediaproj_if_now_show"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mediaproj_retry"
            android:text="@string/common_retry"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
</RelativeLayout>