<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sysoverlay_title"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sysoverlay_content"
            android:text="@string/sysoverlay_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:lineSpacingMultiplier="1.5"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sysoverlay_try"
            android:text="@string/sysoverlay_button"
            android:layout_marginTop="4dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
</RelativeLayout>